_grid.scss
// = Config
//-----------------------------------------------------------------------------//

$gutter: 20px !default;
$columns: 12 !default;

$breakpoint-small: 20em;
$breakpoint-medium: 40em;
$breakpoint-large: 60em;
$breakpoint-xlarge: 80em;

$site_max_width: 1500px;

// = Grid
//-----------------------------------------------------------------------------//

$margin-left: ($gutter/2);
$margin-right: ($gutter/2);

.wrapper {
    margin-left: auto;
    margin-right: auto;
    max-width: $site_max_width;
    width: 100%;
}

.col {
    float: left;
    width: calc(100% - #{$gutter});
    margin-left: $margin-left;
    margin-right: $margin-right;
}

@mixin grid($class: 'col', $columns: $columns, $gutter: $gutter, $extend: '') {

    .col {
        margin-left: ($gutter/2);
        margin-right: ($gutter/2);
    }

    .#{$class} {

        &--switch {
            float: right;
        }
    }

    @for $i from 1 through $columns - 1 {

        $column_width: (($i / $columns) * 100%);

        .#{$class}-#{$i}#{$extend} {
            width: calc(#{$column_width} - #{$gutter});
        }

        // I need to test this
       .#{$class}--push-#{$i} {
            margin-left: calc(#{$column_width} + (#{$gutter}/2));
        }
    }
}

.row {
    margin-left: 0;
    margin-right: 0;
}

// = Set breakpoints
// Example: @include grid($class: 'col', $columns: $columns, $gutter: $gutter, $extend: '');
//-----------------------------------------------------------------------------//

@media (min-width: $breakpoint-medium) {
    @include grid($class: 'small');
}

@media (min-width: $breakpoint-medium) {
    @include grid($class: 'medium');
}

@media (min-width: $breakpoint-large) {
    @include grid($class: 'large');
}

@media (min-width: $breakpoint-xlarge) {
    @include grid($class: 'xlarge');
}

